--- a/about-page.css
+++ b/about-page.css
@@ -17,15 +17,22 @@
 }
 
 .footer {
-  text-align: center;
   background-color: red;
+  text-align: center;
   font-size: 15px;
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 1.5rem;
 }
-
 .image {
   display: flex;
   justify-content: space-between;
+}
+
+.nav-links {
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  font-size: 25px;
 }
