--- a/home-page.css
+++ b/home-page.css
@@ -28,8 +28,16 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 1.5rem;
 }
 
 .image {
   text-align: center;
+}
+
+.nav-links {
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  font-size: 25px;
 }
