--- a/portfolio-page.css
+++ b/portfolio-page.css
@@ -10,10 +10,18 @@
 }
 
 .footer {
-  text-align: center;
   background-color: red;
+  text-align: center;
   font-size: 15px;
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 1.5rem;
+}
+
+.nav-links {
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  font-size: 25px;
 }
