--- a/contact-forum.css
+++ b/contact-forum.css
@@ -29,6 +29,7 @@
   text-align: center;
   font-style: italic;
   text-wrap: balance;
+  height: 2rem;
 }
 
 .nav-links {
@@ -36,4 +37,9 @@
   display: flex;
   justify-content: space-between;
   font-size: 25px;
+}
+
+.further-contact {
+  text-align: right;
+  font-size: 20px;
 }
