--- a/portfolio-page.css
+++ b/portfolio-page.css
@@ -25,3 +25,14 @@
   justify-content: space-between;
   font-size: 25px;
 }
+
+.title {
+  text-align: center;
+  font-size: 40px;
+}
+
+.portfolio {
+  text-align: center;
+  color: red;
+  font-size: 20px;
+}
