completely done! but will double check

--- a/portfolio-page.css
+++ b/portfolio-page.css
@@ -37,4 +37,21 @@
   font-size: 20px;
   border: 5px solid red;
   border-width: 5px;
+  display: inline-block;
+  place-items: center;
+  padding: 10px;
+  width: 50%;
+  max-width: 50%;
+}
+
+.portfolio-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.portfolio-image {
+  margin: 0.5rem auto;
+  object-fit: contain;
+  width: 100%;
 }
